--- a/index.html
+++ b/index.html
@@ -1,13 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
+
+    <head> 
     <meta charset="UTF-8">
-    <title>Home</title>
+    <title>Home</title> <!-- sivun otsikko/nimi, ei näy muualla -->
     <link href="css/style.css" rel="stylesheet" type="text/css">
     </head>
+
     <body>
-        <h1>Moikka!</h1>
-        <p>Miten koodaus sujuu?</p>
-        <img src="assets/pictures/oamk.png" alt="oamk kuva">
+        <h1>Son moro!</h1>
+        <p>Miten kurssi sujuu?</p>
+        <a href="https://www.oamk.fi">Tässä linkki OAMKin sivulle</a>
+        <img src="assets/pictures/oamk.png" alt="oamk english logo">
+
+        <ul>
+            <li>Tämä</li>
+            <li>on</li>
+            <li>järjestämätön</li>
+            <li>lista</li>
+        </ul>
+
+        <ol>
+            <li>Tämä</li>
+            <li>on</li>
+            <li>järjestetty</li>
+            <li>lista</li>
+        </ol>
+
+
     </body>
+
+
 </html>
