added studies section

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <nav>
     <center>
     <a href="#about">about</a> ||
+    <a href="#studies">studies</a> ||
     <a href="#work">work</a> ||
     <a href="#contact">contact</a>
     </center>
@@ -29,15 +30,93 @@
     </p>
     </center>
 
+
     <section id="about" class="bordered-section">
         <h2>About Me</h2>
         <p>In spring 2023, I made an impactful decision: I quit my comfortable job in the funeral industry and applied to study Information and Communications Technology (BEng).
         Now, I'm a second-year student majoring in Software Engineering, and I'm constantly amazed both at the software engineering field and how my previous skills have transferred!
-        My goal is to become a full-stack developer, but I'm also expecially interested in all things UX. My not-so-secret long-term ambition is to combine my core strengths and become product owner!
+        My goal is to work with SaaS, and I'm expecially interested in all things UX. My not-so-secret long-term ambition is to combine my core strengths and become a Product Owner!
         <br><br>When I'm not coding, I'm probably adventuring on my bike, knitting, or planning a trip to Norway to go birdwatching.
     
         </p>
     </section>
+
+
+    <section id="studies" class="bordered-section">
+        <h2>My Studies</h2>
+        <p>I'm currently studying Information and Communications Technology (BEng) at Oulu University of Applied Sciences. My major is Software Engineering, and I'm in my second year of studies.  
+            I am on course to graduate in May 2027.
+            <br><br>Feel free to browse <a href="https://www.oamk.fi">my GitHub</a> repositories for examples of schoolwork I've been doing! 
+            Some of the courses I've taken so far include:
+
+            <table class="studies-table">
+                <thead>
+                    <tr>
+                        <th>Year</th>
+                        <th>Subject</th>
+                        <th>My Grade (1-5)</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>2023</td>
+                        <td>Introduction to Programming</td>
+                        <td>5</td>
+                    </tr>
+                    <tr>
+                        <td>2023</td>
+                        <td>Introduction to Electronics</td>
+                        <td>5</td>
+                    </tr>
+                    <tr>
+                        <td>2023</td>
+                        <td>Introduction to Mathematics and Digital Technology in IT</td>
+                        <td>5</td>
+                    <tr>
+                        <td>2023</td>
+                        <td>IT Application Project</td>
+                        <td>5</td>
+                    </tr>
+                    <tr>
+                        <td>2024</td>
+                        <td>Object Oriented Programming and Design</td>
+                        <td>5</td>
+                    </tr>  
+                    <tr>
+                        <td>2024</td>
+                        <td>Applied Mathematics and Physics in Measurements</td>
+                        <td>5</td>
+                    </tr>
+                    <tr>
+                        <td>2024</td>
+                        <td>Databases and Interfaces</td>
+                        <td>5</td>
+                    </tr>
+                    <tr>
+                        <td>2024</td>
+                        <td>Software Development Application Project</td>
+                        <td>5</td>
+                    </tr>
+                    <tr>
+                        <td>2024</td>
+                        <td>Introduction to Web Development</td>
+                        <td><i>TBA...</i></td>
+                    </tr>
+                    <tr>
+                        <td>2024</td>
+                        <td>Java Programming</td>
+                        <td><i>TBA...</i></td>
+                    </tr>
+                    <tr>
+                        <td>2024</td>
+                        <td>Introduction to Cloud Services</td>
+                        <td><i>TBA...</i></td>
+                    </tr>
+                </tbody>
+            </table>
+
+    </section>
+
 
     <section id="work" class="bordered-section">
         <h2>My Work & Experience</h2>
@@ -87,7 +166,7 @@
     
             <input type="submit" value="Send Message">
         </form>
-
+        <br>
     </section>
 
     </body>
