--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <title>Sanna Tikkakoski</title> <!-- sivun otsikko/nimi, ei näy muualla -->
     <link href="css/style.css" rel="stylesheet" type="text/css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
 
     <body>
-
-    <section id="header" class="bordered-section">
+    
+    <div class="site-container">
+    <section id="header">
     <nav>
     <center>
     <a href="#about">about</a> ||
@@ -18,6 +20,8 @@
     <a href="#contact">contact</a>
     </center>
     </nav>
+
+    <!-- add option for fin/eng? -->
   
     <center>
     <br>
@@ -29,6 +33,7 @@
         <br><br>
     </p>
     </center>
+    </section>
 
 
     <section id="about" class="bordered-section">
@@ -45,10 +50,11 @@
     <section id="studies" class="bordered-section">
         <h2>My Studies</h2>
         <p>I'm currently studying Information and Communications Technology (BEng) at Oulu University of Applied Sciences. My major is Software Engineering, and I'm in my second year of studies.  
-            I am on course to graduate in May 2027.
+            My current GPA is 5.0/5.0, and I am on course to graduate in time in May 2027.
             <br><br>Feel free to browse <a href="https://www.oamk.fi">my GitHub</a> repositories for examples of schoolwork I've been doing! 
             Some of the courses I've taken so far include:
-
+            
+            <!-- add option to collapse grade table? -->
             <table class="studies-table">
                 <thead>
                     <tr>
@@ -151,6 +157,7 @@
         <br><img src="assets/pictures/linkedinlogo.png" alt="linkedin logo" width="14"> <a href="https://www.linkedin.com/in/sanna-poritikkakoski/">sanna-poritikkakoski</a>
         <br><img src="assets/pictures/githublogo.png" alt="github logo" width="14"> <a href="https://github.com/sannatikk">sannatikk</a>
         <br><br>
+        <!-- make submit form actually do something -->
         <form action="submit_form.php" method="post" class="contact-form">
             <label for="name">Your name:*</label>
             <input type="text" id="name" name="name" required>
@@ -169,6 +176,7 @@
         <br>
     </section>
 
+    </div>
     </body>
 
 
