--- a/index.html
+++ b/index.html
@@ -33,10 +33,11 @@
     <!-- Navigation Menu -->
 <nav id="navMenu" class="nav-menu">
     <ul>
-        <li><a href="#about">About</a></li>
-        <li><a href="#studies">Studies</a></li>
-        <li><a href="#work">Work</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="#about">Jump: About</a></li>
+        <li><a href="#studies">Jump: Studies</a></li>
+        <li><a href="#work">Jump: Work</a></li>
+        <li><a href="#contact">Jump: Contact</a></li>
+        <li><a href="playground.html">PLAYGROUND</a></li>
     </ul>
 </nav>
 
