what's the time button

--- a/playground.html
+++ b/playground.html
@@ -63,6 +63,15 @@
     </p>
     </article>
 
+    <article id="current-time" class="flex-item bordered-section">
+        <h2>Current Time</h2>
+        <p>Click the button to find out the current time in Oulu, Finland:
+        <br><br>
+        <button id="fetchTimeButton">What's the Time?</button>
+        <div id="time-display"></div>
+        </p>
+    </article>
+
     </div>
     </div>
     <script src="assets/javascript/actions.js"></script>
