--- a/thanks.html
+++ b/thanks.html
@@ -14,13 +14,7 @@
     <header id="header">
 
     <!--
-    <nav id="siteLanguage">
-    <center>
-        <button id="languageFin">Suomeksi</button>
-        <button id="languageEng">In English</button>
-        <br><br>
-    </center>
-    </nav>
+REMEMBER I NEED TO ADD THE HAMBURGER MENU TO THIS PAGE
     -->
   
     <center>
