quote generator added

--- a/playground.html
+++ b/playground.html
@@ -43,25 +43,10 @@
 
     <section id="playground-info" class="flex-item bordered-section">
         <h2>Welcome to the Project Playground</h2>
-        <p>This page is dedicated to my Web Development course, whose grading criteria requires certain elements to be present on this website that don't fit into a traditional portfolio. 
+        <p>This specific page is dedicated to my Web Development course, whose grading criteria requires certain elements to be present on this website that don't fit into a traditional portfolio. 
             This will likely be deleted once the course is over. Sorry! 
         </p>
     </section>
-
-    <article id="puffins" class="flex-item bordered-section">
-        <h2>Puffins???</h2>
-        <p>Puffins are any of three small species of alcids in the bird genus Fratercula with a brightly coloured beak during the breeding season. These are pelagic seabirds that feed primarily by diving in the water. They breed in large colonies on coastal cliffs or offshore islands, nesting in crevices among rocks or in burrows in the soil. Two species, the tufted puffin and horned puffin, are found in the North Pacific Ocean, while the Atlantic puffin is found in the North Atlantic Ocean.
-        <br><br>Here are some of my favorite photos of puffins:
-        <br><br>
-        <div class="image-grid">
-        <img src="assets/pictures/puffin1.jpg" alt="Puffin image 1">
-        <img src="assets/pictures/puffin2.jpg" alt="Puffin image 2">
-        <img src="assets/pictures/puffin3.jpg" alt="Puffin image 3">
-        <img src="assets/pictures/puffin4.jpg" alt="Puffin image 4">
-        <img src="assets/pictures/puffin5.jpg" alt="Puffin image 5">
-        </div> 
-    </p>
-    </article>
 
     <article id="current-time" class="flex-item bordered-section">
         <h2>Current Time</h2>
@@ -71,6 +56,29 @@
         <div id="time-display"></div>
         </p>
     </article>
+
+    <article id="quote" class="flex-item bordered-section">
+        <h2>Random Quote</h2>
+        <p>Click the button to get a great quote:
+        <br><br>
+        <button id="fetchQuoteButton">Give Me a Quote!</button>
+        <div id="quoteDisplay">
+            <span id="quoteText"></span>
+            <br>
+            <span id="quoteAuthor"></span>
+        </div>
+        </p></article>
+
+    <article id="puffins" class="flex-item bordered-section">
+        <h2>Puffins???</h2>
+        <p>Puffins are any of three small species of alcids in the bird genus Fratercula with a brightly coloured beak during the breeding season. These are pelagic seabirds that feed primarily by diving in the water. They breed in large colonies on coastal cliffs or offshore islands, nesting in crevices among rocks or in burrows in the soil. Two species, the tufted puffin and horned puffin, are found in the North Pacific Ocean, while the Atlantic puffin is found in the North Atlantic Ocean.
+        <br><br>Here are some of my favorite photos of puffins:
+        <br><br></p>
+        <div id="puffin-gallery" class="puffin-gallery"></div>
+
+    </article>
+
+
 
     </div>
     </div>
