--- a/playground.html
+++ b/playground.html
@@ -3,7 +3,7 @@
 
     <head> 
     <meta charset="UTF-8">
-    <title>Sanna Tikkakoski</title> <!-- sivun otsikko/nimi, ei näy muualla -->
+    <title>Sanna Tikkakoski</title>
     <link href="css/style.css" rel="stylesheet" type="text/css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
@@ -13,14 +13,12 @@
     <div class="site-container">
     <header id="header">
 
-        <!-- Hamburger Icon -->
     <div class="hamburger-menu" id="hamburger-menu" onclick="toggleMenu()">
         <div class="bar"></div>
         <div class="bar"></div>
         <div class="bar"></div>
     </div>   
 
-    <!-- Navigation Menu -->
 <nav id="navMenu2" class="nav-menu">
     <ul>
         <li><a href="index.html">Return Home</a></li>
