parking lot info added

--- a/playground.html
+++ b/playground.html
@@ -76,6 +76,32 @@
 
     </article>
 
+    <article id="parkingSpots" class="flex-item bordered-section">
+        <h2>Parking in Oulu</h2>
+        <p>
+            Click the button to find out how many parking spots are currently available in public parking lots in Oulu, Finland:
+            <br><br>
+            <button id="fetchParkingButton">How's the Parking?</button>
+            <br><br>
+    
+            <table id="carParkTable" style="display: none;">
+                <thead>
+                    <tr>
+                        <th onclick="sortTable(0)">Lot Name <span id="arrow0"></span></th>
+                        <th onclick="sortTable(1)">Max Capacity <span id="arrow1"></span></th>
+                        <th onclick="sortTable(2)">Spaces Available <span id="arrow2"></span></th>
+                    </tr>
+                </thead>
+                <tbody id="tableBody">
+                    <!-- Dynamic rows will be added here -->
+                </tbody>
+            </table>
+            
+            <div id="loadingMessage" style="display:none;">Loading data...</div>
+            <div id="errorMessage" style="display:none;">Error fetching data. Please try again later.</div>
+        </p>
+    </article>
+
 
 
     </div>
