--- a/playground.html
+++ b/playground.html
@@ -68,7 +68,7 @@
         </p></article>
 
     <article id="puffins" class="flex-item bordered-section">
-        <h2>Puffins???</h2>
+        <h2>Puffins!!!</h2>
         <p>Puffins are any of three small species of alcids in the bird genus Fratercula with a brightly coloured beak during the breeding season. These are pelagic seabirds that feed primarily by diving in the water. They breed in large colonies on coastal cliffs or offshore islands, nesting in crevices among rocks or in burrows in the soil. Two species, the tufted puffin and horned puffin, are found in the North Pacific Ocean, while the Atlantic puffin is found in the North Atlantic Ocean.
         <br><br>Here are some of my favorite photos of puffins:
         <br><br></p>
@@ -84,7 +84,7 @@
             <button id="fetchParkingButton">How's the Parking?</button>
             <br><br>
     
-            <table id="carParkTable" style="display: none;">
+            <table id="carParkTable" style="display: none;"> <!-- hide at first -->
                 <thead>
                     <tr>
                         <th onclick="sortTable(0)">Lot Name <span id="arrow0"></span></th>
@@ -93,12 +93,27 @@
                     </tr>
                 </thead>
                 <tbody id="tableBody">
-                    <!-- Dynamic rows will be added here -->
+                    <!-- rows will be dynamically added here -->
                 </tbody>
             </table>
             
-            <div id="loadingMessage" style="display:none;">Loading data...</div>
-            <div id="errorMessage" style="display:none;">Error fetching data. Please try again later.</div>
+            <div id="parkingLoadingMessage" style="display:none;">Loading data...</div>
+            <div id="parkingErrorMessage" style="display:none;">Error fetching data. Please try again later.</div>
+        </p>
+    </article>
+
+    <article id="petPics" class="flex-item bordered-section">
+        <h2>Feeling sad? Have a pet picture!</h2>
+        <p>
+            Puffins weren't enough to lift your spirits? You greedy thing. Click the button to see a picture of a cute pet:
+            <br><br>
+            <button id="fetchDogButton">Show Me a Dog!</button>
+            <button id="fetchCatButton">Show Me a Cat!</button>
+            <br><br>
+            <div id="dogPic"></div>
+            <div id="catPic"></div>
+            <div id="petLoadingMessage" style="display:none;">Loading...</div>
+            <div id="petErrorMessage" style="display:none;">Error fetching data. Please try again later.</div>
         </p>
     </article>
 
