--- a/playground.html
+++ b/playground.html
@@ -77,7 +77,7 @@
     </article>
 
     <article id="parkingSpots" class="flex-item bordered-section">
-        <h2>Parking in Oulu</h2>
+        <h2>Had enough of driving?</h2>
         <p>
             Click the button to find out how many parking spots are currently available in public parking lots in Oulu, Finland:
             <br><br>
@@ -105,7 +105,7 @@
     <article id="petPics" class="flex-item bordered-section">
         <h2>Feeling sad? Have a pet picture!</h2>
         <p>
-            Puffins weren't enough to lift your spirits? You greedy thing. Click the button to see a picture of a cute pet:
+            Puffins weren't enough to lift your spirits? You greedy thing. Click either button to see a picture of a cute pet:
             <br><br>
             <button id="fetchDogButton">Show Me a Dog!</button>
             <button id="fetchCatButton">Show Me a Cat!</button>
