--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         <h2>My Work & Experience</h2>
         <p>Feel free to browse <a href="https://www.oamk.fi">my GitHub</a> repositories for examples of schoolwork I've been doing! I'm currently learning about web development, cloud services, and Java.
             <br><br>My favorite project so far has been <a href="https://github.com/sannatikk/ATM_simulator_app">an ATM simulator</a>, where I got to practise building a Qt app, using Node.js, building and querying relational databases, and using RESTful APIs. 
-            Fun extra credit challenges included hosting the database and backend remotely, using custom style sheets, and making the app ensuring cross-platform compatibility.
+            Fun extra credit challenges included hosting the database and backend remotely, using custom style sheets, and ensuring cross-platform compatibility.
             <br><br>Another fun project was the Arduino-based game <a href="https://github.com/sannatikk/SpedenSpelit">"Speden Spelit"</a>, which features LEDs, buttons, and a 7-segment display. Pressing the start button initiates LEDs blinking in random order at a steadily increasing pace. 
             Players must press the gameplay buttons in the correct sequence to accumulate points, and the game ends if a mistake is made; the 7-segment display shows the score and signals if a new high score is achieved.
         <br><br>Some languages I've been using lately:
