--- a/playground.html
+++ b/playground.html
@@ -103,7 +103,7 @@
     </article>
 
     <article id="petPics" class="flex-item bordered-section">
-        <h2>Feeling sad? Have a pet picture!</h2>
+        <h2>Feeling sad?</h2>
         <p>
             Puffins weren't enough to lift your spirits? You greedy thing. Click either button to see a picture of a cute pet:
             <br><br>
