--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
 
     <section id="work" class="flex-item bordered-section">
-        <h3>My Work & Experience</h3>
+        <h3>My Work + Experience</h3>
         <p>Feel free to browse <a href="https://www.oamk.fi">my GitHub</a> repositories for examples of schoolwork I've been doing! I'm currently learning about web development, cloud services, and Java.
             <br><br>My favorite project so far has been <a href="https://github.com/sannatikk/ATM_simulator_app">an ATM simulator</a>, where I got to practise building a Qt app, using Node.js, building and querying relational databases, and using RESTful APIs. 
             Fun extra credit challenges included hosting the database and backend remotely, using custom style sheets, and ensuring cross-platform compatibility.
