--- a/playground.html
+++ b/playground.html
@@ -42,7 +42,7 @@
     <section id="playground-info" class="flex-item bordered-section">
         <h3>Welcome to the Project Playground</h3>
         <p>This specific page is dedicated to my Web Development course, whose grading criteria requires certain elements to be present on this website that don't fit into a traditional portfolio. 
-            This will likely be deleted once the course is over. Sorry! 
+            Therefore, this might get deleted later. Enjoy it while it lasts! 
         </p>
     </section>
 
@@ -103,9 +103,9 @@
     </article>
 
     <article id="petPics" class="flex-item bordered-section">
-        <h3>Feeling sad?</h3>
+        <h3>Feeling down?</h3>
         <p>
-            Puffins weren't enough to lift your spirits? You greedy thing. Click either button to see a picture of a cute pet:
+            Puffins weren't enough to lift your spirits? How unusual. Click either button to see a picture of a cute pet:
             <br><br>
             <button id="fetchDogButton">Show Me a Dog!</button>
             <button id="fetchCatButton">Show Me a Cat!</button>
@@ -113,11 +113,9 @@
             <div id="dogPic"></div>
             <div id="catPic"></div>
             <div id="petLoadingMessage" style="display:none;">Loading...</div>
-            <div id="petErrorMessage" style="display:none;">Error fetching data. Please try again later.</div>
+            <div id="petErrorMessage" style="display:none;">Error fetching data. Please try again.</div>
         </p>
     </article>
-
-
 
     </div>
     </div>
