--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <h3>About Me</h3>
                         <p>
                             In spring 2023, I made the decision to quit my comfortable job in the funeral industry and applied to study Information and Communications Technology (BEng).
-                            Now, I'm a second-year student majoring in Software Engineering, and I'm constantly amazed both at the software engineering field and how my previous skills have transferred!
+                            Now, I'm a second-year student majoring in Software Development, and I'm constantly amazed both at this field and how my previous skills have transferred!
                             My goal is to work with SaaS, and I'm expecially interested in all things UX. My not-so-secret long-term ambition is to combine my core strengths and become a Product Owner!
                             <br><br>When I'm not coding, I'm probably adventuring on my bike, knitting, or planning a trip to Norway to go birdwatching.
                         </p>
