typos, sort by column fix

--- a/playground.html
+++ b/playground.html
@@ -84,7 +84,7 @@
                 <article id="parkingSpots" class="flex-item bordered-section">
                     <h3>Had enough of driving?</h3>
                     <p>
-                        Click the button to find out how many parking spots are currently available in public parking lots in Oulu, Finland:
+                        Click the button to find out how many parking spots are currently available in public parking lots in Oulu:
                             <br><br>
                             <button id="fetchParkingButton">How's the Parking?</button>
                             <br><br>
