comment additions, link fixes

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         <p>
                             I'm currently studying Information and Communications Technology (BEng) at Oulu University of Applied Sciences. My major is Software Engineering, and I'm in my second year of studies.  
                             My current GPA is 5.0/5.0, and I am on course to graduate in time in May 2027.
-                            <br><br>Feel free to browse <a href="https://www.oamk.fi">my GitHub</a> repositories for examples of schoolwork I've been doing! 
+                            <br><br>Feel free to browse <a href="https://www.github.fi/sannatikk/">my GitHub</a> repositories for examples of schoolwork I've been doing! 
                             Some of the courses I've taken so far include:
                             
                             <!-- add option to collapse grade table? -->
@@ -68,6 +68,7 @@
                                     <tr>
                                         <th>Year</th>
                                         <th>Subject</th>
+                                        <th>ECTS*</th>
                                         <th>My Grade (1-5)</th>
                                     </tr>
                                 </thead>
@@ -75,60 +76,73 @@
                                     <tr>
                                         <td>2024</td>
                                         <td>Introduction to Web Applications</td>
+                                        <td>5</td>
                                         <td><i>TBA...</i></td>
                                     </tr>
                                     <tr>
                                         <td>2024</td>
                                         <td>Java Programming</td>
+                                        <td>5</td>
                                         <td><i>TBA...</i></td>
                                     </tr>
 
                                     <tr>
                                         <td>2024</td>
                                         <td>Cloud Services</td>
+                                        <td>5</td>
                                         <td><i>TBA...</i></td>
                                     </tr>
                                     <tr>
                                         <td>2024</td>
                                         <td>Software Development Application Project</td>
+                                        <td>15</td>
                                         <td>5</td>
                                     </tr>
                                     <tr>
                                         <td>2024</td>
                                         <td>Databases and Interfaces</td>
                                         <td>5</td>
+                                        <td>5</td>
                                     </tr>
                                     <tr>
                                         <td>2024</td>
                                         <td>Applied Mathematics and Physics in Measurements</td>
+                                        <td>5</td>
                                         <td>5</td>
                                     </tr>
                                     <tr>
                                         <td>2024</td>
                                         <td>Object Oriented Programming and Design</td>
                                         <td>5</td>
+                                        <td>5</td>
                                     </tr>  
                                     <tr>
                                         <td>2023</td>
                                         <td>IT Application Project</td>
+                                        <td>12</td>
                                         <td>5</td>
                                     </tr>
                                     <tr>
                                         <td>2023</td>
                                         <td>Introduction to Programming</td>
                                         <td>5</td>
+                                        <td>5</td>
                                     </tr>
                                     <tr>
                                         <td>2023</td>
                                         <td>Introduction to Electronics</td>
+                                        <td>5</td>
                                         <td>5</td>
                                     </tr>
                                     <tr>
                                         <td>2023</td>
                                         <td>Introduction to Mathematics and Digital Technology in IT</td>
                                         <td>5</td>
+                                        <td>5</td>
+                                    </tr>
                                 </tbody>
                             </table>
+                            * 1 ECTS = 27 hours of work
                         </p>
                 </section>
 
