added numbers trivia, fixes to portfolio

--- a/playground.html
+++ b/playground.html
@@ -42,16 +42,17 @@
                     <h3>Welcome to the Project Playground</h3>
                         <p>
                             This specific page is dedicated to my Web Development course, whose grading criteria requires certain elements to be present on this website that don't fit into a traditional portfolio. 
-                            Therefore, this might get deleted later. Enjoy it while it lasts! 
+                            I will mostly be practising API calls and JavaScript in general here, so enjoy some interactive content!
+                    
                         </p>
                 </section>
 
                 <article id="current-time" class="flex-item bordered-section">
                     <h3>Current Time</h3>
                         <p>
-                            Click to find out the current time in Oulu:
+                            Click to find out the current time in Finland:
                             <br><br>
-                            <button id="fetchTimeButton">What's the Time?</button>
+                            <button id="fetchTimeButton">What's the Time?</button><br>
                             <div id="time-display"></div>
                         </p>
                 </article>
@@ -70,6 +71,16 @@
                         </p>
                 </article>
 
+                <article id="numberTrivia" class="flex-item bordered-section">
+                    <h3>Number Trivia</h3>
+                    <p>
+                        Click the button to get a fun number-related fact:
+                            <br><br>
+                            <button id="fetchNumberButton">Math is Fun!</button><br><br>
+                            <div id="numberTriviaDisplay"></div>
+                    </p>
+                </article>
+
                 <article id="puffins" class="flex-item bordered-section">
                     <h3>Puffins!!!</h3>
                         <p>
@@ -82,7 +93,7 @@
                 </article>
 
                 <article id="parkingSpots" class="flex-item bordered-section">
-                    <h3>Had enough of driving?</h3>
+                    <h3>Parking in Oulu</h3>
                     <p>
                         Click the button to find out how many parking spots are currently available in public parking lots in Oulu:
                             <br><br>
@@ -104,6 +115,7 @@
                         <div id="parkingErrorMessage" style="display:none;">Error fetching data. Please try again later.</div>
                     </p>
                 </article>
+
 
                 <article id="petPics" class="flex-item bordered-section">
                     <h3>Feeling down?</h3>
