--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                                     </tr>
                                 </tbody>
                             </table>
-                            * 1 ECTS = 27 hours of work
+                            * 1 ECTS = estimated 27 hours of work
                         </p>
                 </section>
 
@@ -150,21 +150,24 @@
                 <section id="work" class="flex-item bordered-section">
                     <h3>My Work + Experience</h3>
                         <p>
-                            Feel free to browse <a href="https://github.com/sannatikk/">my GitHub</a> repositories for examples of schoolwork I've been doing! I'm currently learning about web development, cloud services, and Java.
-                            <br><br>My favorite school project so far has been <a href="https://github.com/sannatikk/web-kurssi-testiprojekti">this site you're currently on</a>! Even though this is only a 5 ECTS course, building a responsive website from scratch has been a great learning experience, and I'm proud of the result. It's very fulfilling to immediately be able to see the fruits of your labor!
-                            <br><br>A great larger (15 ECTS) project from my first year of studies was <a href="https://github.com/sannatikk/ATM_simulator_app">an ATM simulator</a>, where I got to practise building a Qt app, using Node.js, building and querying relational databases, and using RESTful APIs. 
-                            Fun extra credit challenges included hosting the database and backend remotely, using custom style sheets, and ensuring cross-platform compatibility.
-                            <br><br>A fun electronics project (12 ECTS) was the Arduino-based game <a href="https://github.com/sannatikk/SpedenSpelit">"Speden Spelit"</a>, which features LEDs, buttons, and a 7-segment display. Pressing the start button initiates LEDs blinking in random order at a steadily increasing pace. 
-                            Players must press the gameplay buttons in the correct sequence to accumulate points, and the game ends if a mistake is made; the 7-segment display shows the score and signals if a new high score is achieved.
+                            Feel free to browse <a href="https://github.com/sannatikk/">my GitHub</a> repositories for examples of schoolwork I've been doing! Coming up later this fall: a large (15 ECTS) web application project.
+                            
                             <br><br>Some languages I've been using lately:
                             <ul>
                                 <li>Java</li>
-                                <li>C++</li>
-                                <li>SQL</li>
                                 <li>JavaScript</li>
                                 <li>HTML</li>
                                 <li>CSS</li>
+                                <li>C++</li>
+                                <li>SQL</li>
+                                <li>Python</li>
                             </ul>
+                            My favorite project so far has been <a href="https://github.com/sannatikk/web-kurssi-testiprojekti">this site you're currently on</a>! Even though this is only a 5-credit course, building a responsive website from scratch has been a great learning experience, and I'm proud of the result. It's very fulfilling to immediately be able to see the fruits of your labor!
+                            <br><br>A great larger project from my first year of studies was <a href="https://github.com/sannatikk/ATM_simulator_app">an ATM simulator</a>, where I got to practise building a Qt Widget frontend and Node Express backend, hand-building and querying relational databases, and using RESTful APIs. 
+                            Fun extra credit challenges included hosting the database and backend remotely, using custom style sheets, and ensuring cross-platform compatibility.
+                            <br><br>A fun electronics project from 2023 was the Arduino-based game <a href="https://github.com/sannatikk/SpedenSpelit">"Speden Spelit"</a>, which features LEDs, buttons, and a 7-segment display. Pressing the start button initiates LEDs blinking in random order at a steadily increasing pace. 
+                            Players must press the gameplay buttons in the correct sequence to accumulate points, and the game ends if a mistake is made; the 7-segment display shows the score and signals if a new high score is achieved.
+                            <br><br>
                         </p>
                     <h4>Career</h4>
                         <p>
