dark mode option added

--- a/playground.html
+++ b/playground.html
@@ -22,6 +22,7 @@
                 <nav id="navMenu2" class="nav-menu">
                     <ul>
                         <li><a href="index.html">Return Home</a></li>
+                        <li><a href="#" id="toggle-mode2">Switch to Dark Mode</a></li>
                     </ul>
                 </nav>
             
