portfolio and readme updated

--- a/index.html
+++ b/index.html
@@ -48,22 +48,22 @@
                 <section id="about" class="flex-item bordered-section">
                     <h3>About Me</h3>
                         <p>
-                            In spring 2023, I made the decision to quit my comfortable job in the funeral industry and applied to study Information and Communications Technology (BEng).
-                            Now, I'm a second-year student majoring in Software Development, and I'm constantly amazed both at this field and how my previous skills have transferred!
+                            In spring 2023, I made the decision to quit my comfortable job in the funeral industry and apply to get a engineering degree in Information Technology (B.Eng).
+                            Now, I'm a second-year student specializing in Software Development, and I'm loving the learning process and seeing how my past experiences enhance my current studies!
                             My goal is to work with SaaS, and I'm expecially interested in all things UX. My not-so-secret long-term ambition is to combine my core strengths and become a Product Owner!
-                            <br><br>When I'm not coding, I'm probably adventuring on my bike, knitting, or planning a trip to Norway to go birdwatching.
+                            <br><br>When I'm not coding, you can find me adventuring on my bike, knitting, or planning a trip to Norway for some birdwatching.
                         </p>
                 </section>
 
                 <section id="studies" class="flex-item bordered-section">
                     <h3>My Studies</h3>
                         <p>
-                            I'm currently studying Information and Communications Technology (BEng) at Oulu University of Applied Sciences. My major is Software Engineering, and I'm in my second year of studies.  
-                            My current GPA is 5.0/5.0, and I am on course to graduate in time in May 2027.
+                            I'm in the Information Technology (B.Eng) degree program at Oulu University of Applied Sciences. My major is Software Development, and I'm in my second year of studies.  
+                            My GPA is 5.0/5.0, and I am on course to graduate in time in May 2027.
+                            <br><br>My current plans include completing an exchange year at a partner institution in Neu-Ulm, Germany, to earn a double degree (B.Eng in Finland & B.Sc in Germany). The year in Neu-Ulm will be focusing specifically on Artificial Intelligence and Information Management.
                             <br><br>Feel free to browse <a href="https://www.github.fi/sannatikk/">my GitHub</a> repositories for examples of schoolwork I've been doing! 
                             Some of the courses I've taken so far include:
                             
-                            <!-- add option to collapse grade table? -->
                             <table class="studies-table">
                                 <thead>
                                     <tr>
@@ -172,8 +172,9 @@
                         </p>
                     <h4>Career</h4>
                         <p>
-                            In addition to schoolwork, I worked as assistant teacher in our "Introduction to Programming" course in spring 2024. 
-                            This role allowed me to help students learn programming basics, improve my teaching and communication skills, and gain insights into effective mentoring.
+                            In addition to my studies, I worked as an assistant teacher for the “Introduction to Programming” course in spring 2024. 
+                            It was a great opportunity to help students learn the basics of programming while also honing my own teaching and communication skills. 
+                            Teaching really made me look at the fundamentals from a completely different perspective, deepening my understanding and appreciation of the subject.                            
                             <br><br>Ask me about my previous career in the funeral industry! Very few things teach you as much about customer experience, meticulousness, and working under pressure as working with grieving families.
                         </p>
                 </section>
