--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <p>
                             In spring 2023, I made the decision to quit my comfortable job in the funeral industry and apply to get a engineering degree in Information Technology (B.Eng).
                             Now, I'm a second-year student specializing in Software Development, and I'm loving the learning process and seeing how my past experiences enhance my current studies!
-                            My goal is to work with SaaS, and I'm expecially interested in all things UX. My not-so-secret long-term ambition is to combine my core strengths and become a Product Owner!
+                            I'm curious about working with SaaS (one specific SaaS was one of the main reasons I got into this field), and I'm expecially interested in all things UX. My not-so-secret long-term ambition is to combine my core strengths and become a Product Owner.
                             <br><br>When I'm not coding, you can find me adventuring on my bike, knitting, or planning a trip to Norway for some birdwatching.
                         </p>
                 </section>
