minor edits, readme update

--- a/playground.html
+++ b/playground.html
@@ -9,7 +9,7 @@
     </head>
 
     <body>
-        <div class="site-container">
+        <main class="site-container">
         
             <header id="header">
 
@@ -134,7 +134,7 @@
                 </article>
 
             </div>
-        </div>
+        </main>
 
         <script src="assets/javascript/actions.js"></script>
 
