--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
 
     <body>
-        <div class="site-container">
+        <main class="site-container">
 
             <header id="header">
 
@@ -204,7 +204,7 @@
                 </footer>
 
             </div>
-        </div>
+        </main>
         <script src="assets/javascript/actions.js"></script>
     </body>
 </html>
