--- a/playground.html
+++ b/playground.html
@@ -73,7 +73,7 @@
                 </article>
 
                 <article id="numberTrivia" class="flex-item bordered-section">
-                    <h3>Number Trivia</h3>
+                    <h3>Math Trivia</h3>
                     <p>
                         Click the button to get a fun number-related fact:
                             <br><br>
