--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <p>
                             I'm in the Information Technology (B.Eng) degree program at Oulu University of Applied Sciences. My major is Software Development, and I'm in my second year of studies.  
                             My GPA is 5.0/5.0, and I am on course to graduate in time in May 2027.
-                            <br><br>My current plans include completing an exchange year at a partner institution in Neu-Ulm, Germany, to earn a double degree (B.Eng in Finland & B.Sc in Germany). The year in Neu-Ulm will be focusing specifically on Artificial Intelligence and Information Management.
+                            <!-- <br><br>My current plans include completing an exchange year at a partner institution in Neu-Ulm, Germany, to earn a double degree (B.Eng in Finland & B.Sc in Germany). The year in Neu-Ulm will be focusing specifically on Artificial Intelligence and Information Management. -->
                             <br><br>Feel free to browse <a href="https://www.github.fi/sannatikk/">my GitHub</a> repositories for examples of schoolwork I've been doing! 
                             Some of the courses I've taken so far include:
                             
