--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <p>
                             In spring 2023, I made the decision to quit my comfortable job in the funeral industry and apply to get a degree in Information Technology (Bachelor of Engineering).
                             Now, I'm a second-year student specializing in Software Development, and I'm loving the learning process and seeing how my past experiences enhance my current studies!
-                            I'm curious about working with SaaS, and I'm expecially interested in all things UX, because that's what initially sparked my passion for the IT field. 
+                            I'm curious about working with SaaS, and I'm especially interested in all things UX, because that's what initially sparked my passion for the IT field. 
                             My long-term ambitions include finding a position where I can combine my technical skills with my drive for managing projects efficiently and delivering top-tier user experiences.
                             <br><br>When I'm not coding, you can find me adventuring on my bike, knitting, or planning a trip to Norway for some birdwatching.
                         </p>
@@ -60,7 +60,7 @@
                     <h3>My Studies</h3>
                         <p>
                             I'm in the Information Technology (B.Eng) degree program at Oulu University of Applied Sciences. My chosen speciality is Software Development, and I'm in my second year of studies.  
-                            My GPA is 5.0/5.0, and I am on course to graduate in time in May 2027.
+                            My GPA is 5.0/5.0, and I am on course to graduate on time in May 2027.
                             <!-- <br><br>My current plans include completing an exchange year at a partner institution in Neu-Ulm, Germany, to earn a double degree (B.Eng in Finland & B.Sc in Germany). The year in Neu-Ulm will be focusing specifically on Artificial Intelligence and Information Management. -->
                             <br><br>Feel free to browse <a href="https://www.github.fi/sannatikk/">my GitHub</a> repositories for examples of schoolwork I've been doing! 
                             Some of the technical courses I've taken so far include:
