--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                             I'm in the Information Technology (B.Eng) degree program at Oulu University of Applied Sciences. My chosen speciality is Software Development, and I'm in my second year of studies.  
                             My GPA is 5.0/5.0, and I am on course to graduate on time in May 2027.
                             <!-- <br><br>My current plans include completing an exchange year at a partner institution in Neu-Ulm, Germany, to earn a double degree (B.Eng in Finland & B.Sc in Germany). The year in Neu-Ulm will be focusing specifically on Artificial Intelligence and Information Management. -->
-                            <br><br>Feel free to browse <a href="https://www.github.fi/sannatikk/">my GitHub</a> repositories for examples of schoolwork I've been doing! 
+                            <br><br>Feel free to browse <a href="https://www.github.com/sannatikk/">my GitHub</a> repositories for examples of schoolwork I've been doing! 
                             Some of the technical courses I've taken so far include:
                             
                             <table class="studies-table">
